Setup 'ruby' to point to jruby

--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -2,7 +2,8 @@ FROM java:8
 ENV JRUBY_VERSION 1.7.15
 RUN mkdir /opt/jruby \
   && curl http://jruby.org.s3.amazonaws.com/downloads/${JRUBY_VERSION}/jruby-bin-${JRUBY_VERSION}.tar.gz \
-  | tar -zxC /opt/jruby --strip-components=1
+  | tar -zxC /opt/jruby --strip-components=1 \
+  && update-alternatives --install /usr/local/bin/ruby ruby /opt/jruby/bin/jruby 1
 ENV PATH /opt/jruby/bin:$PATH
 
 RUN echo 'gem: --no-rdoc --no-ri' >> /.gemrc
