--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -8,6 +8,13 @@ ENV PATH /opt/jruby/bin:$PATH
 
 RUN echo 'gem: --no-rdoc --no-ri' >> /.gemrc
 
-RUN gem install bundler
+ENV GEM_HOME /usr/local/bundle
+ENV PATH $GEM_HOME/bin:$PATH
+RUN gem install bundler \
+	&& bundle config --global path "$GEM_HOME" \
+	&& bundle config --global bin "$GEM_HOME/bin"
+
+# don't create ".bundle" in all our apps
+ENV BUNDLE_APP_CONFIG $GEM_HOME
 
 CMD [ "irb" ]
