Use https to download jruby

--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -1,7 +1,7 @@
 FROM java:8
 ENV JRUBY_VERSION 1.7.18
 RUN mkdir /opt/jruby \
-  && curl http://jruby.org.s3.amazonaws.com/downloads/${JRUBY_VERSION}/jruby-bin-${JRUBY_VERSION}.tar.gz \
+  && curl https://s3.amazonaws.com/jruby.org/downloads/1.7.18/jruby-bin-${JRUBY_VERSION}.tar.gz \
   | tar -zxC /opt/jruby --strip-components=1 \
   && update-alternatives --install /usr/local/bin/ruby ruby /opt/jruby/bin/jruby 1
 ENV PATH /opt/jruby/bin:$PATH
