Add gemspecs to image
before `bundle install`.

Solves problem that some Gemfiles reference a gemspec and this wasn't
including the gemspec before running `bundle install`, resulting in:

    Trigger 2, RUN bundle install --system
    Step 0 : RUN bundle install --system
     ---> Running in 2cb8961c7e75
    Don't run Bundler as root. Bundler can ask for sudo if it is needed, and
    installing your bundle as root will break this application for all non-root
    users on this machine.
    There are no gemspecs at /usr/src/app.
    2015/02/02 20:53:06 The command [/bin/sh -c bundle install --system] returned a non-zero code: 15

--- a/1.7/onbuild/Dockerfile
+++ b/1.7/onbuild/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /usr/src/app
 
 ONBUILD ADD Gemfile /usr/src/app/
 ONBUILD ADD Gemfile.lock /usr/src/app/
+ONBUILD ADD *.gemspec .gemspec* /usr/src/app/
 ONBUILD RUN bundle install --system
 
 ONBUILD ADD . /usr/src/app
