--- a/9000/jre/Dockerfile
+++ b/9000/jre/Dockerfile
@@ -2,8 +2,8 @@ FROM java:8-jre
 
 RUN apt-get update && apt-get install -y libc6-dev --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
-ENV JRUBY_VERSION 9.0.0.0.pre2
-ENV JRUBY_SHA1 eca37f67ed13daf426f5e1f034209c4d0fb9ef10
+ENV JRUBY_VERSION 9.0.0.0.rc1
+ENV JRUBY_SHA1 9df00bc9b513e886e36c98f7f3d11d820995f35f
 RUN mkdir /opt/jruby \
   && curl -fSL https://s3.amazonaws.com/jruby.org/downloads/${JRUBY_VERSION}/jruby-bin-${JRUBY_VERSION}.tar.gz -o /tmp/jruby.tar.gz \
   && echo "$JRUBY_SHA1 /tmp/jruby.tar.gz" | sha1sum -c - \
