--- a/9000/jre/Dockerfile
+++ b/9000/jre/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:8-jre
+FROM arm64v8/openjdk:8-jre
 
 RUN apt-get update && apt-get install -y libc6-dev --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
