--- a/9000/alpine-jre/Dockerfile
+++ b/9000/alpine-jre/Dockerfile
@@ -29,7 +29,7 @@ RUN mkdir -p /opt/jruby/etc \
     } >> /opt/jruby/etc/gemrc
 
 # install bundler, gem requires bash to work
-RUN gem install bundler
+RUN gem install bundler rake net-telnet xmlrpc
 
 # install things globally, for great justice
 # and don't create ".bundle" in all our apps
