Don't rebuild removed Dockerfiles

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ services:
 
 script:
   - ./update.sh && git diff --quiet HEAD
-  - for i in $(git diff --stat --name-only HEAD~1 | grep Dockerfile); do docker build -< $i; done
+  - for i in $(git diff --stat --name-only --diff-filter=d HEAD~1 | grep Dockerfile); do docker build -< $i; done
