--- a/9.3/jdk17/Dockerfile
+++ b/9.3/jdk17/Dockerfile
@@ -1,6 +1,6 @@
 FROM eclipse-temurin:17-jdk-focal
 
-RUN apt-get update && apt-get install -y libc6-dev --no-install-recommends && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y libc6-dev make --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
 ENV JRUBY_VERSION 9.3.9.0
 ENV JRUBY_SHA256 251e6dd8d1d2f82922c8c778d7857e1bef82fe5ca2cf77bc09356421d0b05ab8
