--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,11 +16,13 @@ jobs:
           - 9.3/jdk17/Dockerfile
           - 9.3/jre8/Dockerfile
           - 9.3/jre11/Dockerfile
+          - 9.3/jre17/Dockerfile
           - 9.4/jdk8/Dockerfile
           - 9.4/jdk11/Dockerfile
           - 9.4/jdk17/Dockerfile
           - 9.4/jre8/Dockerfile
           - 9.4/jre11/Dockerfile
+          - 9.4/jre17/Dockerfile
     runs-on: ubuntu-latest
 
     steps:
