Update to Ubuntu 24.04 for 10 images
Eclipse Temurin does not have JDK/JRE24 images for Jammy

--- a/10.0/jre24/Dockerfile
+++ b/10.0/jre24/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:24-jre-jammy
+FROM eclipse-temurin:24-jre-noble
 
 RUN apt-get update && apt-get install -y libc6-dev make --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
