--- a/10.0/jre24/Dockerfile
+++ b/10.0/jre24/Dockerfile
@@ -1,6 +1,6 @@
 FROM eclipse-temurin:24-jre-noble
 
-RUN apt-get update && apt-get install -y libc6-dev make --no-install-recommends && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y libc6-dev make curl --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
 ENV JRUBY_VERSION 10.0.0.0
 ENV JRUBY_SHA256 427d9827ed23fe6b4d11fe61665c75dd7476ba36a0438376eb310ce2a8d24733
